Fixed Table Issue
Fixed issue where table would overflow outside card container when  the table gets too big.

--- a/src/app/pages/admin/admin-home/admin-home.component.scss
+++ b/src/app/pages/admin/admin-home/admin-home.component.scss
@@ -1,6 +1,7 @@
 .c-1{
     height: 92%;
     width: 94%;
+    overflow: auto;
 }
 .c-2{
     height: 14cm;
