--- a/src/app/pages/patient/patient-home/patient-home.component.scss
+++ b/src/app/pages/patient/patient-home/patient-home.component.scss
@@ -4,6 +4,7 @@ mat-grid-tile{
 .c-1{
     width: 94%;
     height: 90%;
+    overflow: auto;
 }
 .c-2{
     width: 90%;
